[gd_scene load_steps=5 format=3 uid="uid://b7qsbt7e8wdeu"]

[ext_resource type="Script" uid="uid://cuckeu6c8s0r6" path="res://scenes/game/game_over_screen.gd" id="1_6mu64"]
[ext_resource type="FontFile" uid="uid://dmkk06o8nk7i1" path="res://assets/80s-retro-future.ttf" id="1_vygr2"]
[ext_resource type="AudioStream" uid="uid://dkwpp7ugilnbp" path="res://assets/Audio/toggle_002.ogg" id="3_dilvs"]
[ext_resource type="AudioStream" uid="uid://be8makh360ywo" path="res://assets/Audio/question_004.ogg" id="4_gqyho"]

[node name="GameOverScreen" type="Panel"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -103.0
offset_right = 252.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6mu64")

[node name="pText" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 126.675995
offset_top = -76.9679
offset_right = 377.676
offset_bottom = -23.9679
theme_override_colors/font_shadow_color = Color(0.965375, 0.396356, 0.672653, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.298039, 0.396078, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("1_vygr2")
theme_override_font_sizes/font_size = 45
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -129.0
offset_top = 60.0
offset_right = 129.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7
alignment = 1

[node name="Score" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="VBoxContainer/Score"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vygr2")
theme_override_font_sizes/font_size = 26
text = "SCORE:"

[node name="Value" type="Label" parent="VBoxContainer/Score"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vygr2")
theme_override_font_sizes/font_size = 26
text = "0"

[node name="Time" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 65

[node name="Label" type="Label" parent="VBoxContainer/Time"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vygr2")
theme_override_font_sizes/font_size = 26
text = "TIME:"

[node name="Value" type="Label" parent="VBoxContainer/Time"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vygr2")
theme_override_font_sizes/font_size = 26
text = "0"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vygr2")
theme_override_font_sizes/font_size = 26
text = "RESTART"

[node name="toMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vygr2")
theme_override_font_sizes/font_size = 26
text = "QUIT TO MENU"

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_dilvs")
volume_db = 3.528
bus = &"SFX"

[node name="HoverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_gqyho")
bus = &"SFX"

[connection signal="mouse_entered" from="VBoxContainer/Restart" to="." method="_on_restart_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/toMenu" to="." method="_on_to_menu_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/toMenu" to="." method="_on_to_menu_pressed"]
